docs were fixed
